# memclaw

./: .env.example  README.md  pyproject.toml
docs/: memory-architecture.md
memclaw/: agent.py  cli.py  config.py  openai_health.py  reminders.py  setup.py  tools.py
memclaw/backends/: __init__.py  base.py  claude.py  cursor.py  cursor_hooks.py  cursor_sdk_adapter.py  mcp_bridge.py  mcp_tools.py  tool_policy.py
memclaw/bot/: __init__.py  handlers.py  link_processor.py  slack_handlers.py  whatsapp_handlers.py
memclaw/defaults/: AGENTS.md
memclaw/defaults/cursor_hooks/: allow_memclaw_tools.py  hook_policy.json  hooks.json
tests/: test_agent.py  test_reminders.py
tests/backends/: test_claude.py  test_cursor.py  test_cursor_hooks.py  test_mcp_bridge.py  test_mcp_tools.py
