[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memclaw"
version = "1.2.0"
description = "A lightweight, local-first personal memory assistant powered by AI"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Emanuilo Jovanovic", email = "emanuilo.jovanovic@hotmail.com" },
]
requires-python = ">=3.10"
keywords = ["memory", "ai", "assistant", "vector-search", "personal-knowledge", "second-brain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "claude-agent-sdk>=0.1.59,<0.2",
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "python-telegram-bot>=21.0",
    "slack-bolt>=1.18.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "neonize>=0.3.16",
]

[project.scripts]
memclaw = "memclaw.cli:cli"

[project.urls]
Repository = "https://github.com/emanuilo/memclaw"
Issues = "https://github.com/emanuilo/memclaw/issues"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["memclaw"]
